--- a/GUIDE.org
+++ b/GUIDE.org
@@ -47,10 +47,11 @@ machine-generated C code looks like this. There are programs which will clean up
 undesirable layout in C and other languages. The golden rule is to be consistent
 with the layout which your colleagues use.
 ** [[file:Programs/putchar.c][putchar.c]]
-~putchar~ is very fast, but not so good when you have more than a few characters
+~putchar~ is very fast, but maybe inconvenient when you have more than a few characters
 to output!
 ** [[file:Programs/squares1.c][squares1.c]]
-In modern C functions should be /declared/ before they are /called/.  One way is to make sure that their full /definitions/ preceed their use.
+In /Modern C/ functions should be /declared/ before they are /called/. One way
+is to make sure that their full /definitions/ preceed their use.
 
 By the way, ~printf~ is very flexible.  It is much slower than ~puts~ or
 ~putchar~ but very convenient and popular.
@@ -60,11 +61,21 @@ of only the /head/ of the function followed by a semicolon. This allows the
 function /definitions/ to be given in any order or even to be linked in from
 libraries or other modules.
 
-The standard header files, such as <stdio.h> contain /function prototypes/ of
-the functions that can be brought in from libraries with a /linker/, /after/
-your program is compiled (static linking) or even at the time it is run (dynamic
-linking). Other than this mention, this tutorial does not cover linker features
-as they are different on different C development platforms.
+The /one definition rule/ says that you can have *one* /definition/ of any
+entity, e.g. of any /function/, /variable/ or /type/ but you can have as many
+/declarations/ as convenient. The C compiler will check that all declarations
+and the definition are consistent. C compilers process each program file
+sequentially. A C programmer should ensure that any entity is declared before it
+is used, i.e. earlier in the source, either in the same file or in an included
+/header file/.
+
+/Header Files/, including /Standard Header Files/ such as <stdio.h> contain
+/function prototypes/ of /Libraries/ which can either be copied into your
+program's executable file with a /linker/ (static linking) or at the time your
+program is run (dynamic linking). By default, the command which invokes the C
+Compiler will also run a linker to resolve anything declared and used but not
+defined in your program. Other than this mention, this tutorial does not cover
+linker features as they are different on different C development platforms.
 ** [[file:Programs/greet1.c][greet1.c]]
 See [[file:Programs/greet1-diagram.txt][greet1-diagram.txt]]
 
