--- a/Simple-C-Shell/README.org
+++ b/Simple-C-Shell/README.org
@@ -1,5 +1,8 @@
 * Writing A Simple Posix Shell in C
 
+Part of the [[https://gregdavidson.github.io/loel/][League of Extraordinary Learners]] curriculum for [[file:../README.org][Learning C Programming]].
+
+
 This project will significantly support your understanding of
 - Computer Architecture
 - Posix System Calls
